<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 CampusUB1 Development Team

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>

    <string name="app_name">CampusUB1</string>

    <!-- Menus -->
    <string name="menu_settings">Settings</string>
    <string name="menu_establishment_filters">Establishment filters</string>
    <string name="menu_calendar">Add to calendar</string>
    <string name="menu_call">Call</string>
    <string name="menu_mail">Send email</string>
    <string name="menu_add_to_contacts">Add to contacts</string>
    <string name="menu_website">Go to website</string>
    <string name="menu_complete_action">Complete action using</string>
    <string name="menu_read">Mark as read</string>
    <string name="menu_unread">Mark as unread</string>
    <string name="menu_star">Add star</string>
    <string name="menu_unstar">Remove star</string>
    <string name="menu_schedule_view_online">View online</string>
    <string name="menu_schedule_download">Download as PDF</string>
    <string name="menu_schedule_import">Import to default calendar</string>

    <!-- Dialogs -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="select_establishment">Select your establishments</string>
    <string name="filter_results">Filter your results</string>
    <string name="events_loading">Loading events</string>
    <string name="contacts_loading">Loading contacts</string>
    <string name="please_wait">Please wait</string>
    <string name="install">Install</string>
    <string name="play_services">Google Play Services</string>
    <string name="need_play_services">The map requires Google Play Services to be installed</string>
    <string name="schedule_confirm_content">This will import all events to the default calendar. Are you sure you want to proceed?</string>

    <!-- Toasts -->
    <string name="showing_history">Showing offline history</string>
    <string name="updating_events">Updating events</string>
    <string name="connection_failed">Connection failed</string>
    <string name="connection_required">An active Internet connection is required</string>
    <string name="no_matching_contacts">No matching contacts found</string>
    <string name="no_website">No website for this contact</string>
    <string name="no_tel">No telephone number for this contact</string>
    <string name="no_email">No email address for this contact</string>
    <string name="no_gps">Activate GPS for a more accurate localisation</string>
    <string name="showing_starred_events">Showing starred events only</string>
    <string name="showing_upcoming_events">Showing upcoming events only</string>
    <string name="showing_unread_events">Showing unread events only</string>
    <string name="showing_all_events">Showing all events</string>
    <string name="no_play_store">Google Play Store is not installed on your device</string>
    <string name="schedule_importing">Importing schedule</string>
    <string name="schedule_import_complete">Schedule successfully imported</string>
    <string name="schedule_import_failed_fetchgroup">Failed to retrieve schedule groups</string>
    <string name="schedule_import_failed_parse">Failed to import schedule</string>

    <!-- Establishments -->
    <string name="labri">LaBRI</string>
    <string name="ub1">University of Bordeaux 1</string>

    <!-- Activity titles -->
    <string name="title_activity_main">CampusUB1</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_directory">Directory</string>
    <string name="title_activity_scheduler">Schedule</string>
    <string name="title_activity_maps">Campus Map</string>

    <!-- Services -->
    <string name="events">Events</string>
    <string name="directory">Directory</string>
    <string name="schedule">Schedule</string>
    <string name="map">Campus Map</string>

    <!-- Directory strings -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="website_icon">Website</string>
    <string name="tel_not_specified">No telephone number specified</string>
    <string name="email_not_specified">No email address specified</string>

    <!-- Map strings -->
    <string name="campus_restaurants">Restaurants</string>
    <string name="campus_services">Services</string>
    <string name="campus_buildings">Buildings</string>
    <string name="map_search">Search</string>
    <string name="map_not_found">No results found</string>
    <string name="positions">Positions</string>
    <string name="my_position">My position</string>
    <string name="campus_position">Campus position</string>

    <!-- Preferences -->
    <string name="preferences_category">Preferences</string>
    <string name="other_category">Other</string>
    <string name="about_title">About</string>
    <string name="about_logo">Logo Campus UB1</string>
    <string name="about_app_title">Campus UB1</string>
    <string name="about_version">Version 1.0</string>
    <string name="about_copyright">CampusUB1 Development Team ©2013</string>
    <string name="subscriptions_title">Subscriptions</string>
    <string name="subscriptions_summary">Manage your subscribtions</string>
    <string name="filters_title">Filters</string>
    <string name="filters_summary">Manage your filters</string>
    <string name="upcoming_events_title">Range of upcoming events</string>
    <string name="upcoming_events_summary">Set the range of months for which LaBRI events are fetched</string>

    <!-- Content description -->
    <string name="button_search">Search</string>
    <string name="star">Star</string>
    <string name="icon">Icon</string>
    
    <!-- Event categories -->
    <string name="category_main_events">Main Events</string>
    <string name="category_formation">Formation</string>
    <string name="category_research">Research</string>
    <string name="category_university">University</string>
    <string name="category_international">International</string>
    <string name="category_student_life">Student Life</string>
    <string name="category_companies">Companies</string>
    <string name="category_press">Press</string>
    <string name="category_exposition">Expositions</string>
    <string name="category_manifestions">Manifestations</string>
    <string name="category_conferences">Conferences</string>
    <string name="category_theses">Theses</string>
    <string name="category_colloques">Seminars</string>
    <string name="category_groupes">Groups</string>
    <string name="category_autres">Other</string>

    <!-- Schedule Spinner -->
    <string name="schedule_spinner_title">Select your current semester</string>

    <string-array name="schedule_spinner">
        <item>None</item>
        <item>Licence Semestre 1</item>
        <item>Licence Semestre 2</item>
        <item>Master Semestre 1</item>
        <item>Master Semestre 2</item>
    </string-array>
    <!-- LaBRI events of upcoming months -->
    <string-array name="upcoming_events_strings">
        <item>1 month</item>
        <item>2 months</item>
        <item>3 months</item>
        <item>4 months</item>
    </string-array>
</resources>