<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory
        android:title="@string/preferences_category">
        
        <PreferenceScreen
            android:key="subscriptions_screen"
            android:title="@string/subscriptions_title"
            android:summary="@string/subscriptions_summary">
            
            <CheckBoxPreference
                android:key="subscribe_ub1"
                android:title="@string/ub1"
                android:defaultValue="false"
                android:persistent="true"/>
            
            <CheckBoxPreference
                android:key="subscribe_labri"
                android:title="@string/labri"
                android:defaultValue="false"
                android:persistent="true"/>
            
        </PreferenceScreen>
        
        <PreferenceScreen 
            android:key="filters_screen"
            android:title="@string/filters_title"
            android:summary="@string/filters_summary">
            
            <CheckBoxPreference
                android:key="filter_ub1"
                android:title="@string/ub1"
                android:defaultValue="true"
                android:persistent="true"/>
            
            <CheckBoxPreference
                android:key="filter_labri"
                android:title="@string/labri"
                android:defaultValue="true"
                android:persistent="true"/>
            
        </PreferenceScreen>
        
        
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/other_category">
        
        <Preference
            android:key="about_pref"
            android:title="@string/about_title"/>
        
    </PreferenceCategory>

</PreferenceScreen>