<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/map_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search_light"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/map_search"/>
    
    <item
        android:id="@+id/map_positioning"
        android:showAsAction="always"
        android:icon="@drawable/ic_my_pos"
        android:title="@string/positions">
        
        <menu>
            <item
                android:id="@+id/menu_campus_pos"
                android:icon="@drawable/ic_marker"
                android:title="@string/campus_position"/>
            <item
                android:id="@+id/menu_my_pos"
                android:icon="@drawable/ic_marker"
                android:title="@string/my_position"/>
        </menu>
    </item>

</menu>