<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
        
	<item
        android:id="@+id/menu_read"
        android:orderInCategory="60"
        android:showAsAction="always"
        android:title="@string/menu_read"
        android:icon="@drawable/ic_content_read"/>
	
	<item
        android:id="@+id/menu_unread"
        android:orderInCategory="60"
        android:showAsAction="always"
        android:title="@string/menu_unread"
        android:icon="@drawable/ic_content_unread"/>
	
	<item
        android:id="@+id/menu_star"
        android:orderInCategory="60"
        android:showAsAction="always"
        android:title="@string/menu_star"
        android:icon="@drawable/ic_star"/>
	
	<item
        android:id="@+id/menu_unstar"
        android:orderInCategory="60"
        android:showAsAction="always"
        android:title="@string/menu_unstar"
        android:icon="@drawable/ic_unstar"/>
</menu>