<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <fragment
            android:id="@+id/map_UB1"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#323232"
        android:orientation="horizontal"
        android:padding="4dp" >

        <CheckBox
            android:id="@+id/services_check"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:onClick="onCheckboxClicked"
            android:text="@string/campus_services"
            android:textSize="13sp"
            android:layout_alignParentLeft="true" />

        <CheckBox
            android:id="@+id/buildings_check"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:onClick="onCheckboxClicked"
            android:text="@string/campus_buildings"
            android:textSize="13sp"
            android:layout_alignParentRight="true" />

        <CheckBox
            android:id="@+id/restaurants_check"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:checked="true"
            android:onClick="onCheckboxClicked"
            android:text="@string/campus_restaurants"
            android:textSize="13sp" />

    </RelativeLayout>

</LinearLayout>