<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 CampusUB1 Development Team

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="right" >
    
    <TextView
        android:id="@+id/activity_title"
        android:text="@string/title_activity_events" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:maxLines="1"
        android:ellipsize="end"
        android:gravity="left"/>

    <ImageButton
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:contentDescription="@string/menu_settings"
        android:src="@drawable/ic_action_overflow"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        style="?android:attr/actionButtonStyle"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dip"
        android:layout_marginRight="0dip"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="centerInside"/>

    <ImageButton
        android:id="@+id/menu_filters"
        android:contentDescription="@string/menu_establishment_filters"
        android:src="@drawable/ic_filters"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        style="?android:attr/actionButtonStyle"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/menu_settings" 
        android:layout_marginRight="0dip"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="centerInside" />

</RelativeLayout>